AM_CPPFLAGS = -I$(srcdir)/..

check_PROGRAMS = some_test test_all2 test_all3 test_all4 test_all	\
test_any2 test_any3 test_any4 test_any test_none2 test_none3		\
test_none4 test_none test_one2 test_one3 test_one4 test_one

TESTS = $(check_PROGRAMS)

some_test_SOURCES = some_test.cc
test_all2_SOURCES = test_all2.cc
test_all3_SOURCES = test_all3.cc
test_all4_SOURCES = test_all4.cc
test_all_SOURCES = test_all.cc
test_any2_SOURCES = test_any2.cc
test_any3_SOURCES = test_any3.cc
test_any4_SOURCES = test_any4.cc
test_any_SOURCES = test_any.cc
test_none2_SOURCES = test_none2.cc
test_none3_SOURCES = test_none3.cc
test_none4_SOURCES = test_none4.cc
test_none_SOURCES = test_none.cc
test_one2_SOURCES = test_one2.cc
test_one3_SOURCES = test_one3.cc
test_one4_SOURCES = test_one4.cc
test_one_SOURCES = test_one.cc
